--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,26 +1,86 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<title></title>
+
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
+
+	<title>Symfony</title>
+
+	<!-- Bootstrap core CSS -->
+	<link href="https://blackrockdigital.github.io/startbootstrap-bare/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
+
 <body>
-	<h1>hello world!</h1>
 
-	<h3>new post</h3>
-	<form action="post" method="get">
-		Post: <input type="text" name="name">
-		Category: <input type="text" name="category">
-		<button type="submit">Add</button>
-	</form>
-	<h3>posts: </h3>
-	<hr>
-	<hr>
-	{% for post in posts %}
-	<a href="post/{{ post.id }}">{{ post.name }}</a>
-	<hr>
-    {% endfor %}
-    <hr>
+	<!-- Navigation -->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+		<div class="container">
+			<a class="navbar-brand" href="#">Symfony</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="/">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="user">Users / Login</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="logout">Logout</a>
+					</li>
+					<li class="nav-item">
+						<p>{{ email }}</p>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 
-    <a href="/user">Users page (login, register)</a>
+	<!-- Page Content -->
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-6">
+				{% if email != "" %}
+				<h3>new post</h3>
+				<form action="post" method="get">
+					<div class="form-group">
+						<label for="post">Post</label>
+						<input type="text" class="form-control" id="post" name="name" placeholder="Post">
+					</div>
+					<div class="form-group">
+						<label for="category">Category</label>
+						<input type="text" class="form-control" id="category" name="category" placeholder="Category">
+					</div>
+					<button type="submit" class="btn btn-primary">Add</button>
+				</form>
+				{% else %}
+				<p>Log in to post something</p>
+				{% endif %}
+			</div>
+			<div class="col-lg-6">
+				<h3>posts: </h3>
+				<hr>
+				<hr>
+				{% for post in posts %}
+				<a href="post/{{ post.id }}">{{ post.name }}</a>
+				<hr>
+				{% endfor %}
+				<hr>
+			</div>
+		</div>
+	</div>
+
+	<!-- Bootstrap core JavaScript -->
+	<script src="https://blackrockdigital.github.io/startbootstrap-bare/vendor/jquery/jquery.slim.min.js"></script>
+	<script src="https://blackrockdigital.github.io/startbootstrap-bare/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
