--- a/templates/user.html.twig
+++ b/templates/user.html.twig
@@ -1,30 +1,95 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
-	<h3>login</h3>
-	<form action="login" method="get">
-		<input type="email" name="email">
-		<input type="password" name="pass">
-		<button type="submit">Login</button>
-	</form>
-	
-	<h3>users: </h3>
-	<hr>
-	<hr>
-	{% for user in users %}
-	<p>{{ user.email }}</p>
-	<hr>
-    {% endfor %}
-    <hr>
+<html lang="en">
 
-    <h3>register</h3>
-	<form action="register" method="get">
-		<input type="email" name="email">
-		<input type="password" name="pass">
-		<button type="submit">Register</button>
-	</form>
+<head>
+
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
+
+	<title>Symfony</title>
+
+	<!-- Bootstrap core CSS -->
+	<link href="https://blackrockdigital.github.io/startbootstrap-bare/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+	<!-- Navigation -->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+		<div class="container">
+			<a class="navbar-brand" href="#">Symfony</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="/">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="user">Users / Login</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="logout">Logout</a>
+					</li>
+					<li class="nav-item">
+						<p>{{ email }}</p>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+	<!-- Page Content -->
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-6">
+				<h3>login</h3>
+				<form action="login" method="get">
+					<div class="form-group">
+						<label for="email">Email</label>
+						<input type="email" class="form-control" id="email" name="email" placeholder="Email">
+					</div>
+					<div class="form-group">
+						<label for="password">Password</label>
+						<input type="password" class="form-control" id="password" name="pass" placeholder="Password">
+					</div>
+					<button type="submit" class="btn btn-primary">Login</button>
+				</form>
+				<hr>
+				<h3>register</h3>
+				<form action="register" method="get">
+					<div class="form-group">
+						<label for="email">Email</label>
+						<input type="email" class="form-control" id="email" name="email" placeholder="Email">
+					</div>
+					<div class="form-group">
+						<label for="password">Password</label>
+						<input type="password" class="form-control" id="password" name="pass" placeholder="Password">
+					</div>
+					<button type="submit" class="btn btn-primary">Register</button>
+				</form>
+			</div>
+			<div class="col-lg-6">
+				<h3>users: </h3>
+				<hr>
+				<hr>
+				{% for user in users %}
+				<p>{{ user.email }}</p>
+				<hr>
+				{% endfor %}
+				<hr>
+			</div>
+		</div>
+	</div>
+
+	<!-- Bootstrap core JavaScript -->
+	<script src="https://blackrockdigital.github.io/startbootstrap-bare/vendor/jquery/jquery.slim.min.js"></script>
+	<script src="https://blackrockdigital.github.io/startbootstrap-bare/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
