--- a/templates/show.html.twig
+++ b/templates/show.html.twig
@@ -59,7 +59,7 @@
 			</div>
 			<div class="col-lg-6">
 				<p>post: {{ post.name }}</p>
-				<p>category: {{ categoryName }}</p>
+				<p>category: </p>
 
 				<h3>comments: </h3>
 				<hr>
