--- a/templates/user.html.twig
+++ b/templates/user.html.twig
@@ -32,12 +32,14 @@
 					<li class="nav-item">
 						<a class="nav-link" href="user">Users / Login</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="logout">Logout</a>
-					</li>
-					<li class="nav-item">
-						<p>{{ email }}</p>
-					</li>
+					{% if email %}
+						<li class="nav-item">
+							<a class="nav-link" href="/index.php/logout">Logout</a>
+						</li>
+						<li class="nav-item">
+							<p>{{ email }}</p>
+						</li>
+					{% endif %}
 				</ul>
 			</div>
 		</div>
